--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -5,20 +5,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <title th:text="#{screen.error.page.title.permissiondenied}">Error - Permission Denied</title>
+    <title th:text="#{screen.error.page.title.permissiondenied}"></title>
     <link href="../../static/css/cas.css" rel="stylesheet" th:remove="tag"/>
 </head>
 
-<body>
-    <main role="main" class="container mt-3 mb-3">
-        <div layout:fragment="content" class="mdc-card p-4 w-lg-66 m-auto">
-            <h2 th:utext="#{screen.error.page.authdenied}">Authorization Denied</h2>
-            <p th:utext="#{screen.error.page.permissiondenied}">You do not have permission to view this page.</p>
-            <a class="mdc-button" th:href="@{/login(errorSource=403)}">
-                <span class="mdc-button__label" th:utext="#{screen.error.page.loginagain}">Login Again</span>
-            </a>
+<body class="mdc-typography">
+    <div layout:fragment="content" class="d-flex justify-content-center">
+        <div class="d-flex justify-content-center flex-md-row flex-column mdc-card mdc-card-content w-lg-30">
+            <section class="login-error-card">
+
+                <section>
+                    <div th:replace="fragments/osfbannerui :: osfBannerUI">
+                        <a href="fragments/osfbannerui.html"></a>
+                    </div>
+                </section>
+
+                <section class="text-without-mdi text-center text-bold text-large margin-large-vertical title-danger">
+                    <span th:utext="#{screen.authnerror.instructions}"></span>
+                </section>
+
+                <hr class="my-4" />
+
+                <section class="card-message">
+                    <h2 th:utext="#{screen.error.page.authdenied}"></h2>
+                    <p th:utext="#{screen.error.page.permissiondenied}"></p>
+                </section>
+
+                <hr class="my-4" />
+
+                <section class="text-with-mdi">
+                    <i class="mdi mdi-login mdi-before-text"></i>
+                    <span><a th:href="@{/login(errorSource=403)}" th:utext="#{screen.error.page.loginagain}"></a></span>
+                </section>
+
+            </section>
         </div>
-    </main>
+    </div>
 </body>
 
 </html>
