OSF CAS customized authn error pages rework
* The CAS unavailable / server error page is excluded for now.
* Follow the "banner-title-heading-messag-button-link" design.
* Sign-up button is disabled for all authn error pages.
* Depending on the context, the button and link can either be:
  1) clear current CAS session and back to login with default
  services (e.g. service unauthorized), or 2) clear both CAS
  and OSF sessions and go back to the OSF home page.
* No extra CSS tweaks / hacks
* Added registered service JSON definition for relative paths
  /login? and /logout?. This allows CAS to redirect the flow
  back to a new login flow after an logout flow has ended.

--- a/src/main/resources/templates/casAccountNotConfirmedOsfView.html
+++ b/src/main/resources/templates/casAccountNotConfirmedOsfView.html
@@ -11,45 +11,39 @@
 
 <body class="mdc-typography">
     <div layout:fragment="content" class="d-flex justify-content-center">
+
         <div class="d-flex justify-content-center flex-md-row flex-column mdc-card mdc-card-content w-lg-30">
             <section class="login-error-card">
-
                 <section>
                     <div th:replace="fragments/osfbannerui :: osfBannerUI">
                         <a href="fragments/osfbannerui.html"></a>
                     </div>
                 </section>
-
                 <section class="text-without-mdi text-center text-bold text-large margin-large-vertical title-danger">
                     <span th:utext="#{screen.authnerror.instructions}"></span>
                 </section>
-
                 <hr class="my-4" />
-
                 <section class="card-message">
                     <h2 th:utext="#{screen.accountnotconfirmedosf.heading}"></h2>
                     <p th:utext="#{screen.accountnotconfirmedosf.message}"></p>
                 </section>
-
                 <section class="form-button">
                     <a class="mdc-button mdc-button--raised button-osf-blue" th:href="@{${osfUrl.resendConfirmation}}">
                         <span class="mdc-button__label" th:utext="#{screen.authnerror.button.resendosfconfirmation}"></span>
                     </a>
                 </section>
-
                 <hr class="my-4" />
-
                 <section class="text-with-mdi">
-                    <i class="mdi mdi-keyboard-backspace mdi-before-text"></i>
+                    <i class="mdi mdi-logout mdi-before-text"></i>
                     <span><a th:href="@{/logout(service=${osfUrl.logout})}" th:utext="#{screen.authnerror.button.backtoosf}"></a></span>
                 </section>
-
             </section>
         </div>
 
         <script type="text/javascript">
             disableSignUpButton();
         </script>
+
     </div>
 </body>
 
