--- a/src/main/resources/templates/fragments/tosloginform.html
+++ b/src/main/resources/templates/fragments/tosloginform.html
@@ -96,7 +96,7 @@
                     function checkTosConsent(checkbox) {
                         let submitButton = document.getElementById("primarySubmitButton");
                         submitButton.disabled = !checkbox.checked;
-                        submitButton.style.backgroundColor = checkbox.checked ? "#1b6d85": "#EFEFEF";
+                        submitButton.style.backgroundColor = checkbox.checked ? "#1b6d85": "#efefef";
                     }
                 </script>
 
