--- a/src/main/resources/templates/fragments/headerflowless.html
+++ b/src/main/resources/templates/fragments/headerflowless.html
@@ -20,7 +20,7 @@
                         <img class="cas-logo" src="/images/osf-logo-white.png">
                     </span>
                     <div class="cas-brand-text">
-                        <a class="navbar-link" th:href="@{/login(errorSource=-1)}">
+                        <a class="navbar-link" th:href="@{/login(casRedirectSource=tomcat)}">
                             <span class="cas-brand-name hidden-narrow" >OSF </span>
                             <span class="cas-brand-name" >CAS</span>
                         </a>
