--- a/src/main/resources/templates/casLogoutView.html
+++ b/src/main/resources/templates/casLogoutView.html
@@ -35,7 +35,7 @@
                 <hr class="my-4" />
                 <section class="text-with-mdi" th:with="loginUrl=@{/login(casRedirectSource=cas)}">
                     <i class="mdi mdi-login mdi-before-text"></i>
-                    <span><a th:href="@{/login(casRedirectSource=200)}" th:utext="#{screen.generic.logoutsuccess.link.login}"></a></span>
+                    <span><a th:href="@{/login(casRedirectSource=cas)}" th:utext="#{screen.generic.logoutsuccess.link.login}"></a></span>
                 </section>
             </section>
         </div>
