--- a/src/main/resources/templates/error/423.html
+++ b/src/main/resources/templates/error/423.html
@@ -35,7 +35,7 @@
 
                 <section class="text-with-mdi">
                     <i class="mdi mdi-login mdi-before-text"></i>
-                    <span><a th:href="@{/login(errorSource=405)}" th:utext="#{screen.error.page.loginagain}"></a></span>
+                    <span><a th:href="@{/login(casRedirectSource=tomcat)}" th:utext="#{screen.error.page.loginagain}"></a></span>
                 </section>
 
             </section>
