Clean up messages.properties

--- a/src/main/resources/templates/casAccountDisabledView.html
+++ b/src/main/resources/templates/casAccountDisabledView.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title th:text="#{screen.accountdisabled.heading}"></title>
+    <title th:text="#{screen.authnerror.title}"></title>
     <link href="../../static/css/cas.css" rel="stylesheet" th:remove="tag" />
 </head>
 
@@ -20,7 +20,7 @@
                     </div>
                 </section>
                 <section class="text-without-mdi text-center text-bold text-large margin-large-vertical title-danger">
-                    <span th:utext="#{screen.authnerror.instructions}"></span>
+                    <span th:utext="#{screen.authnerror.tips}"></span>
                 </section>
                 <hr class="my-4" />
                 <section class="card-message">
