--- a/src/main/resources/templates/casInstitutionLoginView.html
+++ b/src/main/resources/templates/casInstitutionLoginView.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
-    <title th:text="#{screen.institutionlogin.pagetitle}"></title>
+    <title th:text="#{screen.institutionlogin.title}"></title>
     <link href="../../static/css/cas.css" rel="stylesheet" th:remove="tag"/>
 </head>
 
@@ -31,7 +31,7 @@
                     </section>
 
                     <section class="text-without-mdi text-center text-bold text-large margin-large-vertical">
-                        <span th:utext="#{screen.institutionlogin.instructions}"></span>
+                        <span th:utext="#{screen.institutionlogin.tips}"></span>
                     </section>
 
                     <section class="card-message">
