--- a/src/main/resources/templates/casLoginView.html
+++ b/src/main/resources/templates/casLoginView.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title th:text="#{cas.login.pagetitle}"></title>
+    <title th:text="#{cas.login.title}"></title>
     <link href="../../static/css/cas.css" rel="stylesheet" th:remove="tag" />
 
 </head>
