--- a/src/main/resources/templates/casLogoutView.html
+++ b/src/main/resources/templates/casLogoutView.html
@@ -20,7 +20,7 @@
                     </div>
                 </section>
                 <section class="text-without-mdi text-center text-bold text-large margin-large-vertical title-danger">
-                    <span th:utext="#{screen.generic.loginsuccess.tip}"></span>
+                    <span th:utext="#{screen.generic.loginsuccess.tips}"></span>
                 </section>
                 <hr class="my-4" />
                 <section class="card-message">
