--- a/src/main/resources/templates/error/401.html
+++ b/src/main/resources/templates/error/401.html
@@ -21,7 +21,7 @@
                 </section>
 
                 <section class="text-without-mdi text-center text-bold text-large margin-large-vertical title-danger">
-                    <span th:utext="#{screen.authnerror.instructions}"></span>
+                    <span th:utext="#{screen.authnerror.tips}"></span>
                 </section>
 
                 <hr class="my-4" />
