--- a/src/main/resources/templates/fragments/loginform.html
+++ b/src/main/resources/templates/fragments/loginform.html
@@ -23,7 +23,7 @@
             </section>
 
             <section class="text-without-mdi text-center text-bold text-large margin-large-vertical">
-                <span th:utext="#{screen.welcome.instructions}"></span>
+                <span th:utext="#{screen.welcome.tips}"></span>
             </section>
 
             <section class="form-button-inline" id="orcidlogin" th:if="${osfCasLoginContext.orcidLoginUrl}">
