--- a/src/main/resources/templates/fragments/tosloginform.html
+++ b/src/main/resources/templates/fragments/tosloginform.html
@@ -23,7 +23,7 @@
             </section>
 
             <section class="text-without-mdi text-center text-bold text-large margin-large-vertical">
-                <span th:utext="#{screen.tosconsent.instructions}"></span>
+                <span th:utext="#{screen.tosconsent.tips}"></span>
             </section>
 
             <section class="card-message">
