--- a/src/main/resources/templates/fragments/totploginform.html
+++ b/src/main/resources/templates/fragments/totploginform.html
@@ -23,7 +23,7 @@
             </section>
 
             <section class="text-without-mdi text-center text-bold text-large margin-large-vertical">
-                <span th:utext="#{screen.twofactor.instructions.top}"></span>
+                <span th:utext="#{screen.twofactor.tips.top}"></span>
             </section>
 
             <div class="form-wrapper">
@@ -120,7 +120,7 @@
                 <hr class="my-4" />
 
                 <section class="text-without-mdi">
-                    <p th:utext="#{screen.twofactor.instructions.bottom}"></p>
+                    <p th:utext="#{screen.twofactor.tips.bottom}"></p>
                 </section>
 
                 <section class="cas-field-col-2">
