--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title th:text="#{screen.unavailable.header}"></title>
+    <title th:text="#{screen.servererror.title}"></title>
     <link href="../../static/css/cas.css" rel="stylesheet" th:remove="tag" />
 </head>
 
@@ -20,7 +20,7 @@
                     </div>
                 </section>
                 <section class="text-without-mdi text-center text-bold text-large margin-large-vertical title-danger">
-                    <span th:utext="#{screen.authnerror.instructions}"></span>
+                    <span th:utext="#{screen.authnerror.tips}"></span>
                 </section>
                 <hr class="my-4" />
                 <section class="card-message">
@@ -41,7 +41,7 @@
                 <!-- <section th:if="${devMode}"> -->
                     <hr class="my-4" />
                     <section class="text-without-mdi text-center text-bold text-large margin-large-vertical title-danger">
-                        <span th:utext="#{screen.authnerror.instructions.devmode}"></span>
+                        <span th:utext="#{screen.authnerror.tips.devmode}"></span>
                     </section>
                     <section class="pre-formatted-small word-break-all">
                         <pre th:utext="${'Error: ' + status + ' - ' + error}"></pre>
