--- a/src/main/resources/templates/casInstitutionLoginView.html
+++ b/src/main/resources/templates/casInstitutionLoginView.html
@@ -12,7 +12,7 @@
 <body class="login mdc-typography">
         <div layout:fragment="content" class="d-flex justify-content-center">
             <div class="d-flex justify-content-center flex-md-row flex-column mdc-card mdc-card-content w-lg-30">
-                <section class="login-section login-form">
+                <section class="login-section login-form login-instn-card">
 
                     <section class="mb-4 service-ui text-center">
                         <table class="osf-shield-with-name">
@@ -30,11 +30,8 @@
                         </table>
                     </section>
 
-                    <section class="text-without-mdi text-center text-bold text-large margin-large-vertical">
-                        <span th:utext="#{screen.institutionlogin.tips}"></span>
-                    </section>
-
                     <section class="card-message">
+                        <h2 th:utext="#{screen.institutionlogin.heading}"></h2>
                         <p th:unless=${osfCasLoginContext.institutionId} th:utext="#{screen.institutionlogin.message.select}"></p>
                         <p th:if=${osfCasLoginContext.institutionId} th:utext="#{screen.institutionlogin.message.auto}"></p>
                     </section>
@@ -51,15 +48,15 @@
                         </select>
                     </section>
 
-                    <section class="text-with-mdi" th:if=${osfCasLoginContext.institutionId}>
+                    <section class="text-with-mdi">
                         <i class="mdi mdi-checkbox-blank-off-outline mdi-before-text"></i>
-                        <span><a th:href="@{/login(campaign=institution, institutionId=${institutionId ?: ''}, service=${service?.originalUrl ?: ''})}" th:utext="#{screen.institutionlogin.link.select}"></a></span>
+                        <span th:if="${osfCasLoginContext.institutionId}">
+                            <a th:href="@{/login(campaign=institution, institutionId=${institutionId ?: ''}, service=${service?.originalUrl ?: ''})}" th:utext="#{screen.institutionlogin.link.select}"></a>
+                        </span>
+                        <span th:unless="${osfCasLoginContext.institutionId}">
+                            <a th:href="@{/login(campaign=unsupportedinstitution, institutionId=${institutionId ?: ''}, service=${service?.originalUrl ?: ''})}" th:utext="#{screen.institutionlogin.link.unsupported}"></a>
+                        </span>
                     </section>
-
-                    <div class="instn-unsupported" th:unless=${osfCasLoginContext.institutionId}>
-                        <i class="mdi mdi-menu mdi-before-text"></i>
-                        <span><a th:href="@{/login(campaign=unsupportedinstitution, institutionId=${institutionId ?: ''}, service=${service?.originalUrl ?: ''})}" th:utext="#{screen.institutionlogin.select.unsupported}"></a></span>
-                    </div>
 
                     <section class="form-button">
                         <button type="button" id="institutionSubmit" class="mdc-button mdc-button--raised" name="submit" onclick="institutionLogin()"
