Front-end fixes
* Display standalone institution login button if ORCiD login is
  not available to an registered service whose access strategies
  block the access.
* Display OSF banner instead of the names of registered services
  that are of type OAuthRegisteredService (i.e. developer apps).
  These names are set by app creator which OSF / COS have no
  controll over. The authorization consent approval page already
  shows the name and other information of the app.

--- a/src/main/resources/static/css/cas.css
+++ b/src/main/resources/static/css/cas.css
@@ -893,6 +893,21 @@ body {
     padding-left: 28px;
 }
 
+.form-button .delegation-button-logo {
+    position: absolute;
+    left: 20px;
+    top: 11px;
+    padding: 2px;
+    height: 36px;
+}
+
+.form-button .delegation-button-label {
+    font-size: 1rem;
+    color: black;
+    white-space: nowrap;
+    padding-left: 28px;
+}
+
 .login-error-card .form-button {
     padding-top: 1rem;
 }
