--- a/src/main/resources/templates/fragments/loginform.html
+++ b/src/main/resources/templates/fragments/loginform.html
@@ -26,11 +26,18 @@
                 <span th:utext="#{screen.welcome.tips}"></span>
             </section>
 
-            <section class="form-button-inline" id="orcidlogin" th:if="${osfCasLoginContext.orcidLoginUrl}">
-                <a class="mdc-button mdc-button--raised button-osf-grey" th:href="@{${osfCasLoginContext.orcidLoginUrl}}">
+            <section class="form-button-inline" th:if="${osfCasLoginContext.orcidLoginUrl}">
+                <a class="mdc-button mdc-button--raised button-osf-grey" id="orcidlogin" th:href="@{${osfCasLoginContext.orcidLoginUrl}}">
                     <img class="delegation-button-logo" src="/images/orcid-logo.png">
                     <span class="delegation-button-label" th:utext="#{screen.welcome.button.orcidlogin}"></span>
                 </a>
+                <a class="mdc-button mdc-button--raised button-osf-grey" id="instnLogin" th:href="@{/login(campaign=institution, institutionId=${institutionId ?: ''}, service=${service?.originalUrl ?: ''})}">
+                    <img class="delegation-button-logo" src="/images/institution-logo.png">
+                    <span class="delegation-button-label" th:utext="#{screen.welcome.button.institutionlogin}"></span>
+                </a>
+            </section>
+
+            <section class="form-button" id="instnLoginStandalone" th:unless="${osfCasLoginContext.orcidLoginUrl}">
                 <a class="mdc-button mdc-button--raised button-osf-grey" th:href="@{/login(campaign=institution, institutionId=${institutionId ?: ''}, service=${service?.originalUrl ?: ''})}">
                     <img class="delegation-button-logo" src="/images/institution-logo.png">
                     <span class="delegation-button-label" th:utext="#{screen.welcome.button.institutionlogin}"></span>
