--- a/src/main/resources/templates/casUnsupportedInstitutionLoginView.html
+++ b/src/main/resources/templates/casUnsupportedInstitutionLoginView.html
@@ -46,6 +46,10 @@
                     </a>
                 </section>
 
+                <section>
+                    <hr class="hr-text" data-content="OR">
+                </section>
+
                 <section id="osfUnsupportedInstitutionLogin">
                     <div class="card-message">
                         <p th:utext="#{screen.unsupp-instn.existing.setpw.message}"></p>
