--- a/src/main/resources/templates/fragments/tosloginform.html
+++ b/src/main/resources/templates/fragments/tosloginform.html
@@ -99,6 +99,10 @@
                     }
                 </script>
 
+                <script type="text/javascript">
+                    disableSignUpButton();
+                </script>
+
                 <script type="text/javascript" th:inline="javascript">
                     /*<![CDATA[*/
                         var i = /*[[@{#{screen.generic.button.wip}}]]*/ 'One moment please...';
