Disable developer mode on the generic login success page
* Removed detailed attributes and show-hide button
* Moved a few attributes (email, names, OSF user GUID and CAS
  principal ID) to the standard output
* Added UTC timestamp

--- a/src/main/resources/templates/casGenericSuccessView.html
+++ b/src/main/resources/templates/casGenericSuccessView.html
@@ -27,6 +27,13 @@
                     <h2 th:utext="#{screen.generic.loginsuccess.heading}"></h2>
                     <div th:utext="#{screen.generic.loginsuccess.message}"></div>
                 </section>
+                <section class="pre-formatted-small word-break-all">
+                    <pre th:unless="${#strings.isEmpty(authentication.principal.attributes.get('username'))}" th:utext="${'Email: ' + authentication.principal.attributes.get('username')}"></pre>
+                    <pre th:unless="${#strings.isEmpty(authentication.principal.attributes.get('givenName')) or #strings.isEmpty(authentication.principal.attributes.get('familyName'))}" th:utext="${'Name: ' + authentication.principal.attributes.get('givenName') + ' ' + authentication.principal.attributes.get('familyName')}"></pre>
+                    <pre th:unless="${#strings.isEmpty(authentication.principal.attributes.get('osfGuid'))}" th:utext="${'User ID: ' + authentication.principal.attributes.get('osfGuid')}"></pre>
+                    <pre th:unless="${#strings.isEmpty(authentication.principal.id)}" th:utext="${'Principal ID: ' + authentication.principal.id}"></pre>
+                    <pre th:utext="${'Timestamp: ' + #dates.formatISO(#dates.createNow())}"></pre>
+                </section>
                 <section class="form-button">
                     <a class="mdc-button mdc-button--raised button-osf-blue" th:href="@{${osfUrl.dashboard}}">
                         <span class="mdc-button__label" th:utext="#{screen.generic.loginsuccess.button.continue}"></span>
@@ -36,8 +43,8 @@
                 <section class="text-with-mdi">
                     <span><a th:href="@{/logout(service=${osfUrl.logout})}" th:utext="#{screen.generic.loginsuccess.link.cancel}"></a></span>
                 </section>
+                <!--
                 <section>
-                <!-- <section th:if="${osfCasLoginContext.devMode}"> -->
                     <hr class="my-4" />
                     <section class="text-without-mdi text-center text-bold text-large margin-large-vertical title-danger">
                         <span th:utext="#{screen.authnerror.tips.devmode}"></span>
@@ -83,6 +90,7 @@
                         </div>
                     </section>
                 </section>
+                -->
             </section>
         </div>
 
