Reword and restyle tips on generic login and logout success pages

--- a/src/main/resources/templates/casLogoutView.html
+++ b/src/main/resources/templates/casLogoutView.html
@@ -19,8 +19,8 @@
                         <a href="fragments/osfbannerui.html"></a>
                     </div>
                 </section>
-                <section class="text-without-mdi text-center text-bold text-large margin-large-vertical title-danger">
-                    <span th:utext="#{screen.generic.loginsuccess.tips}"></span>
+                <section class="text-without-mdi text-center text-bold text-large margin-large-vertical title">
+                    <span th:utext="#{screen.generic.logoutsuccess.tips}"></span>
                 </section>
                 <hr class="my-4" />
                 <section class="card-message">
