--- a/src/main/resources/templates/casGenericSuccessView.html
+++ b/src/main/resources/templates/casGenericSuccessView.html
@@ -19,7 +19,7 @@
                         <a href="fragments/osfbannerui.html"></a>
                     </div>
                 </section>
-                <section class="text-without-mdi text-center text-bold text-large margin-large-vertical title-danger">
+                <section class="text-without-mdi text-center text-bold text-large margin-large-vertical title">
                     <span th:utext="#{screen.generic.loginsuccess.tips}"></span>
                 </section>
                 <hr class="my-4" />
